--- a/my-shadcn-app/index.html
+++ b/my-shadcn-app/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-shadcn-app</title>
+    <title>FGR DOCS</title>
+    <meta name="description" content="Documentação da Fórmula Gama Racing" />
+    <meta name="author" content="Manuella Perlin" />
+
+    <meta property="og:title" content="FGR DOCS" />
+    <meta property="og:type" content="website" />
+
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
